--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "media-chrome": "^4.17.2",
+    "motion": "^12.34.0",
     "next": "^16.1.6",
     "next-sanity": "^12.1.0",
     "react": "^19.2.4",
@@ -38,6 +39,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.2.1",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
@@ -45,7 +47,7 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.6",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   }
 }
