--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.33.0",
+    "framer-motion": "^12.34.0",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
@@ -30,11 +30,13 @@
     "motion": "^12.34.0",
     "next": "^16.1.6",
     "next-sanity": "^12.1.0",
+    "next-seo": "^7.2.0",
     "react": "^19.2.4",
     "react-day-picker": "^9.13.1",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "sanity": "^5.8.1",
+    "schema-dts": "^1.1.5",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
